test/cli/test-validating-policy/check-deployment-labels/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- deployment1.yaml
- deployment2.yaml
results:
- isValidatingPolicy: true
  kind: Deployment
  policy: check-deployment-labels
  resources:
  - bad-deployment
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: check-deployment-labels
  resources:
  - good-deployment
  result: pass
